--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,37 +1,32 @@
 ---
 # tasks file for ansible-role-acpid
 
-- include_vars: "{{ ansible_os_family }}.yml"
+- name: "Include variables {{ ansible_os_family }}.yml"
+  include_vars: "{{ ansible_os_family }}.yml"
 
-- include: "install-{{ ansible_os_family }}.yml"
+- name: "Include install-{{ ansible_os_family }}.yml"
+  include: "install-{{ ansible_os_family }}.yml"
 
-- name: Create log directory
-  file:
-    path: "{{ acpid_log_dir }}"
-    mode: 0755
-    owner: "{{ acpid_user }}"
-    group: "{{ acpid_group }}"
-    state: directory
-  notify: Restart acpid
-
-- name: Create db directory
-  file:
-    path: "{{ acpid_db_dir }}"
-    mode: 0755
-    owner: "{{ acpid_user }}"
-    group: "{{ acpid_group }}"
-    state: directory
-  notify: Restart acpid
-
-- name: Create acpid.conf
+- name: Create acpid_events files
   template:
-    src: acpid.conf.j2
-    dest: "{{ acpid_conf_file }}"
-    validate: echo %s
+    src: event.j2
+    dest: "{{ acpid_events_dir }}/{{ item.name }}"
+    validate: sh -n %s
+  with_items: "{{ acpid_events }}"
+  when:
+    - "not 'state' in item or ('state' in item and item.state == 'present')"
+  notify: Restart acpid
+
+- name: Remove acpid_events files
+  file:
+    path: "{{ acpid_events_dir }}/{{ item.name }}"
+    state: absent
+  with_items: "{{ acpid_events }}"
+  when:
+    - "'state' in item and item.state == 'absent'"
   notify: Restart acpid
 
 - name: Start acpid
   service:
     name: "{{ acpid_service }}"
-    enabled: true
     state: started
