--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,8 +7,8 @@ galaxy_info:
   license: BSD
   min_ansible_version: 2.0
   platforms:
-    - name: FreeBSD
+    - name: Ubuntu
       versions:
-        - 12.0
+        - xenial
   galaxy_tags:
-    - system
+    - system12.0
