--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -13,8 +13,9 @@ provisioner:
   ansible_verbosity: 1
   ansible_verbose: true
   ansible_extra_flags: <%= ENV['ANSIBLE_EXTRA_FLAGS'] %>
-  # requirements_path: requirements.yml
+  requirements_path: requirements.yml
   http_proxy: <%= ENV['ANSIBLE_PROXY'] %>
+  no_proxy: 127.0.0.1,localhost,<%= ENV['NO_PROXY'] %>
   idempotency_test: true
   additional_copy_path:
     - extra_modules
@@ -24,6 +25,11 @@ platforms:
   - name: ubuntu-18.04-amd64
     driver:
       box: trombik/ansible-ubuntu-18.04-amd64
+      box_check_update: false
+
+  - name: centos-7.4-x86_64
+    driver:
+      box: trombik/ansible-centos-7.4-x86_64
       box_check_update: false
 
 suites:
